2010-08-02  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (hierarchy_ch_cb, qttip_cb): Do not define unless
	USE_GTK_TOOLTIP.
	(xg_prepare_tooltip): Return 0 unless USE_GTK_TOOLTIP
	(xg_show_tooltip, xg_hide_tooltip): Do nothing unless
	USE_GTK_TOOLTIP.
	(xg_create_frame_widgets): Surrond tooltip-related code with ifdef
	USE_GTK_TOOLTIP.
	(xg_free_frame_widgets): Don't delete ttip_* unless USE_GTK_TOOLTIP.

	* xterm.h (USE_GTK_TOOLTIP): New define.
	(struct x_output): Put ttip_* inside ifdef USE_GTK_TOOLTIP.

	* sysdep.c (child_setup_tty): Enable ICANON in lflags and set VEOF
	to Control-D (Bug#6771).

2010-08-02  Juanma Barranquero  <lekktu@gmail.com>

	* editfns.c (Fregion_beginning, Fregion_end): Doc fixes (bug#6493).
	Wording by Drew Adams <drew.adams@oracle.com>.

2010-08-01  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.h (struct x_output): Add ttip_widget, ttip_window and
	ttip_lbl.

	* xterm.c (x_clear_frame): Check FRAME_GTK_WIDGET (f) before
	calling gtk_widget_queue_draw.
	(x_free_frame_resources): Call xg_free_frame_widgets.

	* xfns.c (x_gtk_use_system_tooltips): New variable.
	(Fx_show_tip): If USE_GTK and x_gtk_use_system_tooltips, call
	new gtkutil tooltip functions to show the tooltip.
	(Fx_hide_tip): Call xg_hide_tooltip.
	(syms_of_xfns): Defvar x-gtk-use-system-tooltips.

	* gtkutil.h (xg_free_frame_widgets, xg_prepare_tooltip)
	(xg_show_tooltip, xg_hide_tooltip): Declare.

	* gtkutil.c (hierarchy_ch_cb, qttip_cb, xg_prepare_tooltip)
	(xg_show_tooltip, xg_hide_tooltip, xg_free_frame_widgets): New
	functions.
	(xg_create_frame_widgets): Set ttip_* to 0.  Set a dummy tooltip
	text so qttip_cb is called.  Connect query-tooltip to qttip_cb.
	Remove code that is commented out.

2010-08-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (Fdefine_key, Flookup_key): Say what event is invalid.

2010-07-31  Chong Yidong  <cyd@stupidchicken.com>

	* xselect.c (x_own_selection): Use list4.

2010-07-30  Dan Nicolaescu  <dann@ics.uci.edu>
